# stdr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-build.yml  cargo-test.yml
src/: main.rs
src/tui/: mod.rs
