[package]
name = "stdr"
version = "0.1.0"
edition = "2021"
authors = ["Jaden Accord <dev@jadenaccord.com>"]
readme = "README.md"
repository = "https://github.com/Jayby18/stdr"
keywords = ["tui"]
categories = []
exclude = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
mpsc = "0.2.0"
ratatui = "0.23.0"
thread = "0.1.0"
