[package]
name = "stdr"
version = "0.1.1"
edition = "2021"
authors = ["Jaden Accord <dev@jadenaccord.com>"]
readme = "README.md"
repository = "https://github.com/Jayby18/stdr"
license = "MIT"
license-file = "LICENSE"
keywords = ["tui"]
categories = []
exclude = ["src/main.rs"]
description = "A custom standard library for things I use often."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
mpsc = "0.2.0"
ratatui = "0.23.0"
thread = "0.1.0"
